--- a/filmes-series.html
+++ b/filmes-series.html
@@ -186,8 +186,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <h2>ReceitasGourmet</h2>
-                    <p>Receitas especiais para todos os gostos</p>
+                    <h2>SnackIt</h2>
                 </div>
                 <div class="footer-links">
                     <h3>Links Rápidos</h3>
@@ -211,7 +210,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 ReceitasGourmet. Todos os direitos reservados.</p>
+                <p>&copy; 2025 SnackIt. Todos os direitos reservados.</p>
             </div>
         </div>
     </footer>
