--- a/perfil.html
+++ b/perfil.html
@@ -61,79 +61,81 @@
         <!-- Email do usuario-->
         <p>emaildousuario@gmail.com</p>
 
-         <!-- Botões -->
-          <div class="botoes">
-            <div class="btn-editar-conta">
+        <!-- Botões -->
+        <div class="botoes">
+          <div class="btn-editar-conta">
             <a href="editar_perfil.php" class="btn">Editar Perfil</a>
           </div>
           <div class="logout-btn">
             <a href="logout.php" class="btn sair">Sair</a>
           </div>
-          </div>
         </div>
       </div>
-        <!-- Receitas favoritas -->
-        <h3>Receitas Favoritas</h3>
-        <div class="grid-receitas">
-          <div class="receita-card" data-id="receita-1">
-            <div class="receita-imagem">
-              <img src="receitas/imgs/espaguette.png" alt="Receita 1">
-              <!-- estrela como botão (SVG) -->
-              <button class="favorite-star" aria-label="Favoritar receita" title="Favoritar">
-                <!-- SVG star (usa currentColor) -->
-                <svg viewBox="0 0 24 24" width="20" height="20" aria-hidden="true" focusable="false">
-                  <path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.62L12 2 9.19 8.62 2 9.24l5.46 4.73L5.82 21z" />
-                </svg>
-              </button>
-            </div>
+    </div>
+    <!-- Receitas favoritas -->
+    <h3>Receitas Favoritas</h3>
+    <div class="grid-receitas">
+      <div class="receita-card" data-id="receita-1">
+        <div class="receita-imagem">
+          <img src="receitas/imgs/espaguette.png" alt="Receita 1">
+          <!-- estrela como botão (SVG) -->
+          <button class="favorite-star" aria-label="Favoritar receita" title="Favoritar">
+            <!-- SVG star (usa currentColor) -->
+            <svg viewBox="0 0 24 24" width="20" height="20" aria-hidden="true" focusable="false">
+              <path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.62L12 2 9.19 8.62 2 9.24l5.46 4.73L5.82 21z" />
+            </svg>
+          </button>
+        </div>
 
-            <div class="receita-conteudo">
-              <h4>Nome Da Receita</h4>
-              <p>kafb ahsdfh ashdbflasbdlhbLUHFbLUHEBFulweyfbuwehyfblhwebbvlujhbvlcHvlcuhBLuchBuCHYVQUEGCBLahbCLiuqybevFOUEWFVBCHBCILquhefO8YGWEBFLYHBEDCLqihbeFPIY8gbefuyhqEBLFCbqeifcbyQOEIYFBwefoaFJJINIFBhihfbeipHABDOIFHboifhbOISHFBOIhabfoiHBOFIHWABIODF</p>
-            </div>
-          </div>
+        <div class="receita-conteudo">
+          <h4>Nome Da Receita</h4>
+          <p>kafb ahsdfh
+            ashdbflasbdlhbLUHFbLUHEBFulweyfbuwehyfblhwebbvlujhbvlcHvlcuhBLuchBuCHYVQUEGCBLahbCLiuqybevFOUEWFVBCHBCILquhefO8YGWEBFLYHBEDCLqihbeFPIY8gbefuyhqEBLFCbqeifcbyQOEIYFBwefoaFJJINIFBhihfbeipHABDOIFHboifhbOISHFBOIhabfoiHBOFIHWABIODF
+          </p>
+        </div>
+      </div>
 
-          <!-- CARD 1 – Bobó de Palmito -->
-          <div class="receita-card" data-id="receita-bobo-palmito">
-            <div class="receita-imagem">
-              <img src="receitas/imgs/bobo-palmito.jpg" alt="Receita 2">
+      <!-- CARD 1 – Bobó de Palmito -->
+      <div class="receita-card" data-id="receita-bobo-palmito">
+        <div class="receita-imagem">
+          <img src="receitas/imgs/bobo-palmito.jpg" alt="Receita 2">
 
-              <!-- Estrela -->
-              <button class="favorite-star" aria-label="Favoritar receita" title="Favoritar">
-                <svg viewBox="0 0 24 24" width="20" height="20">
-                  <path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.62L12 2 9.19 8.62 2 9.24l5.46 4.73L5.82 21z" />
-                </svg>
-              </button>
-            </div>
+          <!-- Estrela -->
+          <button class="favorite-star" aria-label="Favoritar receita" title="Favoritar">
+            <svg viewBox="0 0 24 24" width="20" height="20">
+              <path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.62L12 2 9.19 8.62 2 9.24l5.46 4.73L5.82 21z" />
+            </svg>
+          </button>
+        </div>
 
-            <div class="receita-conteudo">
-              <h4>Bobó de Palmito Vegano</h4>
-              <p>descrição da receita</p>
-            </div>
-          </div>
-
-
-          <!-- CARD 2 – Hambúrguer de Beterraba -->
-          <div class="receita-card" data-id="receita-hamburguer-beterraba">
-            <div class="receita-imagem">
-              <img src="receitas/imgs/hamburguer-beterraba.webp" alt="Receita 3">
-
-              <!-- Estrela -->
-              <button class="favorite-star" aria-label="Favoritar receita" title="Favoritar">
-                <svg viewBox="0 0 24 24" width="20" height="20">
-                  <path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.62L12 2 9.19 8.62 2 9.24l5.46 4.73L5.82 21z" />
-                </svg>
-              </button>
-            </div>
-
-            <div class="receita-conteudo">
-              <h4>Hambúrguer de Beterraba</h4>
-              <p>descrição da receita</p>
-            </div>
-          </div>
+        <div class="receita-conteudo">
+          <h4>Bobó de Palmito Vegano</h4>
+          <p>descrição da receita</p>
+        </div>
+      </div>
 
 
-         
+      <!-- CARD 2 – Hambúrguer de Beterraba -->
+      <div class="receita-card" data-id="receita-hamburguer-beterraba">
+        <div class="receita-imagem">
+          <img src="receitas/imgs/hamburguer-beterraba.webp" alt="Receita 3">
+
+          <!-- Estrela -->
+          <button class="favorite-star" aria-label="Favoritar receita" title="Favoritar">
+            <svg viewBox="0 0 24 24" width="20" height="20">
+              <path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.62L12 2 9.19 8.62 2 9.24l5.46 4.73L5.82 21z" />
+            </svg>
+          </button>
+        </div>
+
+        <div class="receita-conteudo">
+          <h4>Hambúrguer de Beterraba</h4>
+          <p>descrição da receita</p>
+        </div>
+      </div>
+
+
+
       <script src="js/dark-mode.js"></script>
 </body>
 
