--- a/veganas.html
+++ b/veganas.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,16 +9,21 @@
     <link rel="stylesheet" href="css/dark-mode.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
-     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Open+Sans:wght@300;400;600&display=swap"
+        rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Open+Sans:wght@300;400;600&display=swap"
+        rel="stylesheet">
     <script src="https://kit.fontawesome.com/23a7e280be.js" crossorigin="anonymous"></script>
-    
+
 </head>
+
 <body>
     <header>
         <div class="container">
             <div class="logo">
-                 <img src="images/logo_snack_it.png" alt="">
+                <img src="images/logo_snack_it.png" alt="">
             </div>
             <nav>
                 <button class="mobile-menu-btn">
@@ -26,11 +32,11 @@
                     <span></span>
                 </button>
                 <ul class="menu">
-                   <li><a href="filmes-series.html">Filmes & Séries</a></li>
+                    <li><a href="filmes-series.html">Filmes & Séries</a></li>
                     <li><a href="veganas.html">Veganas</a></li>
                     <li><a href="fitness.html">Fitness</a></li>
                     <li><a href="originais.html">Originais</a></li>
-                    <li><a href="sobre.html"><i class="fa-solid fa-question"></i></a></li> 
+                    <li><a href="sobre.html"><i class="fa-solid fa-question"></i></a></li>
                     <li><a href="index.html" class="active"><i class="fa-solid fa-house"></i></a></li>
                     <li><a href="login.html" class="active"><i class="fa-solid fa-user"></i></a></li>
                 </ul>
@@ -47,151 +53,161 @@
 
     <div class="recipes">
 
-    <section class="recipes-grid">
-        <div class="container">
-            <div class="recipe-card" id="hamburguer-feijao">
-                <div class="recipe-img" style="background-image: url('images/beterrada.webp');"></div>
-                <div class="recipe-content">
-                    <span class="recipe-category">Vegano</span>
-                    <h3>Hambúrguer de Feijão com Beterraba</h3>
-                    <p>Um hambúrguer vegano delicioso e nutritivo, perfeito para qualquer refeição.</p>
-                    <a href="Hambúrguer-beterraba.html" class="btn-text">Ver Receita Completa</a>
+        <section class="recipes-grid">
+            <div class="container">
+                <div class="recipe-card" id="hamburguer-feijao">
+                    <div class="recipe-img" style="background-image: url('images/beterrada.webp');"></div>
+                    <div class="recipe-content">
+                        <span class="recipe-category">Vegano</span>
+                        <h3>Hambúrguer de Feijão com Beterraba</h3>
+                        <p>Um hambúrguer vegano delicioso e nutritivo, perfeito para qualquer refeição.</p>
+                        <a href="Hambúrguer-beterraba.html" class="btn-text">Ver Receita Completa</a>
+                    </div>
+                </div>
+
+                <div class="recipe-card">
+                    <div class="recipe-img" style="background-image: url('images/estrogonofe-vegeta-1.jpg');"></div>
+                    <div class="recipe-content">
+                        <span class="recipe-category">Vegano</span>
+                        <h3>Strogonoff vegano</h3>
+                        <p>Um strogonoff vegano inovador, feito à base de cogumelos, ideal para surpreender no almoço de
+                            domingo com muito sabor e leveza.
+                        </p>
+                        <a href="strogonoff-vegano.html" class="btn-text">Ver Receita Completa</a>
+                    </div>
+                </div>
+
+                <div class="recipe-card">
+                    <div class="recipe-img" style="background-image: url('images/Lasanha-vegetariana.jpg');"></div>
+                    <div class="recipe-content">
+                        <span class="recipe-category">Vegano</span>
+                        <h3>Lasanha vegana</h3>
+                        <p>Uma releitura da lasanha tradicional, agora em versão vegana, prática de preparar e
+                            deliciosa, ideal para agradar a todos à mesa — inclusive quem não consome produtos de origem
+                            animal.</p>
+                        <a href="#cheddar-recipe" class="btn-text">Ver Receita Completa</a>
+                    </div>
+                </div>
+
+                <div class="recipe-card">
+                    <div class="recipe-img" style="background-image: url('images/Vegan-Poke-Bowl-0619-I-1.jpg');"></div>
+                    <div class="recipe-content">
+                        <span class="recipe-category">Vegano</span>
+                        <h3>Tofu Poke Bowl</h3>
+                        <p>Um poke bowl vegano à base de tofu, saboroso e nutritivo, perfeito para quem busca
+                            praticidade e um jantar leve totalmente plant-based.</p>
+                        <a href="poke-veg.html" class="btn-text">Ver Receita Completa</a>
+                    </div>
+                </div>
+
+                <div class="recipe-card">
+                    <div class="recipe-img"
+                        style="background-image: url('images/espaguete-de-abobrinha-principal.webp');"></div>
+                    <div class="recipe-content">
+                        <span class="recipe-category">Vegano</span>
+                        <h3>Espaguete de abobrinha
+                        </h3>
+                        <p>Espaguete de abobrinha leve e nutritivo, servido al dente com molho de tomate caseiro.</p>
+                        <a href="#maionese-recipe" class="btn-text">Ver Receita Completa</a>
+                    </div>
+                </div>
+
+                <div class="recipe-card">
+                    <div class="recipe-img" style="background-image: url('images/PAO-DE-QUEIJO-VEGANO.jpg');"></div>
+                    <div class="recipe-content">
+                        <span class="recipe-category">Vegano</span>
+                        <h3>Pão de queijo vegano
+                        </h3>
+                        <p>Pão de queijo vegano feito com tofu e polvilhos, crocante por fora e macio por dentro. Uma
+                            versão prática, saborosa e sem ingredientes de origem animal.</p>
+                        <a href="#humus-recipe" class="btn-text">Ver Receita Completa</a>
+                    </div>
                 </div>
             </div>
+        </section>
 
-            <div class="recipe-card">
-                <div class="recipe-img" style="background-image: url('images/estrogonofe-vegeta-1.jpg');"></div>
-                <div class="recipe-content">
-                    <span class="recipe-category">Vegano</span>
-                    <h3>Strogonoff vegano</h3>
-                    <p>Um strogonoff vegano inovador, feito à base de cogumelos, ideal para surpreender no almoço de domingo com muito sabor e leveza.
-</p>
-                    <a href="strogonoff-vegano.html" class="btn-text">Ver Receita Completa</a>
+        <section class="recipes-grid">
+            <div class="container">
+                <div class="recipe-card" id="hamburguer-feijao">
+                    <div class="recipe-img" style="background-image: url('images/caju.webp');"></div>
+                    <div class="recipe-content">
+                        <span class="recipe-category">Vegano</span>
+                        <h3>Manteiga de castanha de caju com coco
+
+                        </h3>
+                        <p>Trufas cremosas de castanha de caju e coco, rápidas de preparar e saudáveis.</p>
+                        <a href="maneitga-caju-coco.html" class="btn-text">Ver Receita Completa</a>
+                    </div>
+                </div>
+
+                <div class="recipe-card">
+                    <div class="recipe-img" style="background-image: url('images/bobo-vegano.webp');"></div>
+                    <div class="recipe-content">
+                        <span class="recipe-category">Vegano</span>
+                        <h3>Bobó de palmito</h3>
+                        <p>Creme de mandioca com palmito e temperos aromáticos, saboroso e fácil de preparar.</p>
+                        <a href="bobo-palmito-veg.html" class="btn-text">Ver Receita Completa</a>
+                    </div>
+                </div>
+
+                <div class="recipe-card">
+                    <div class="recipe-img" style="background-image: url('images/carne-moida-vegana.jpg');"></div>
+                    <div class="recipe-content">
+                        <span class="recipe-category">Vegano</span>
+                        <h3>Carne moída vegana
+                        </h3>
+                        <p>Carne moída vegana de soja, temperada e refogada, prática e saborosa para diversas receitas.
+                        </p>
+                        <a href="#cheddar-recipe" class="btn-text">Ver Receita Completa</a>
+                    </div>
+                </div>
+
+                <div class="recipe-card">
+                    <div class="recipe-img" style="background-image: url('images/hamburguer-de-grao-de-bico.webp');">
+                    </div>
+                    <div class="recipe-content">
+                        <span class="recipe-category">Vegano</span>
+                        <h3>Hambúrguer de grão-de-bico
+                        </h3>
+                        <p>Hambúrguer de grão-de-bico com cogumelos e molho de castanhas, nutritivo, vegano e cheio de
+                            sabor.</p>
+                        <a href="#queijo-branco-recipe" class="btn-text">Ver Receita Completa</a>
+                    </div>
+                </div>
+
+                <div class="recipe-card">
+                    <div class="recipe-img" style="background-image: url('images/pure-de-batata-sem-erro.avif');"></div>
+                    <div class="recipe-content">
+                        <span class="recipe-category">Vegano</span>
+                        <h3>Purê de batata sem leite:
+                        </h3>
+                        <p>Purê de batata vegano é fácil, feito com água e azeite, e tão saboroso quanto o tradicional.
+                        </p>
+                        <a href="#maionese-recipe" class="btn-text">Ver Receita Completa</a>
+                    </div>
+                </div>
+
+                <div class="recipe-card">
+                    <div class="recipe-img" style="background-image: url('images/feijoada-vegana-portal.webp');"></div>
+                    <div class="recipe-content">
+                        <span class="recipe-category">Vegano</span>
+                        <h3>
+                            Feijoada vegana
+                        </h3>
+                        <p>Salada de feijão-branco é nutritiva e prática, combinando legumes, brócolis, milho e
+                            azeitonas, perfeita como acompanhamento ou prato leve.</p>
+                        <a href="#humus-recipe" class="btn-text">Ver Receita Completa</a>
+                    </div>
                 </div>
             </div>
+        </section>
+    </div>
 
-            <div class="recipe-card">
-                <div class="recipe-img" style="background-image: url('images/Lasanha-vegetariana.jpg');"></div>
-                <div class="recipe-content">
-                    <span class="recipe-category">Vegano</span>
-                    <h3>Lasanha vegana</h3>
-                    <p>Uma releitura da lasanha tradicional, agora em versão vegana, prática de preparar e deliciosa, ideal para agradar a todos à mesa — inclusive quem não consome produtos de origem animal.</p>
-                    <a href="#cheddar-recipe" class="btn-text">Ver Receita Completa</a>
-                </div>
-            </div>
-
-            <div class="recipe-card">
-                <div class="recipe-img" style="background-image: url('images/Vegan-Poke-Bowl-0619-I-1.jpg');"></div>
-                <div class="recipe-content">
-                    <span class="recipe-category">Vegano</span>
-                    <h3>Tofu Poke Bowl</h3>
-                    <p>Um poke bowl vegano à base de tofu, saboroso e nutritivo, perfeito para quem busca praticidade e um jantar leve totalmente plant-based.</p>
-                    <a href="poke-veg.html" class="btn-text">Ver Receita Completa</a>
-                </div>
-            </div>
-
-            <div class="recipe-card">
-                <div class="recipe-img" style="background-image: url('images/espaguete-de-abobrinha-principal.webp');"></div>
-                <div class="recipe-content">
-                    <span class="recipe-category">Vegano</span>
-                    <h3>Espaguete de abobrinha
-</h3>
-                    <p>Espaguete de abobrinha leve e nutritivo, servido al dente com molho de tomate caseiro.</p>
-                    <a href="#maionese-recipe" class="btn-text">Ver Receita Completa</a>
-                </div>
-            </div>
-
-            <div class="recipe-card">
-                <div class="recipe-img" style="background-image: url('images/PAO-DE-QUEIJO-VEGANO.jpg');"></div>
-                <div class="recipe-content">
-                    <span class="recipe-category">Vegano</span>
-                    <h3>Pão de queijo vegano
-</h3>
-                    <p>Pão de queijo vegano feito com tofu e polvilhos, crocante por fora e macio por dentro. Uma versão prática, saborosa e sem ingredientes de origem animal.</p>
-                    <a href="#humus-recipe" class="btn-text">Ver Receita Completa</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-     <section class="recipes-grid">
-        <div class="container">
-            <div class="recipe-card" id="hamburguer-feijao">
-                <div class="recipe-img" style="background-image: url('images/caju.webp');"></div>
-                <div class="recipe-content">
-                    <span class="recipe-category">Vegano</span>
-                    <h3>Manteiga de castanha de caju com coco
-
-</h3>
-                    <p>Trufas cremosas de castanha de caju e coco, rápidas de preparar e saudáveis.</p>
-                    <a href="maneitga-caju-coco.html" class="btn-text">Ver Receita Completa</a>
-                </div>
-            </div>
-
-            <div class="recipe-card">
-                <div class="recipe-img" style="background-image: url('images/bobo-vegano.webp');"></div>
-                <div class="recipe-content">
-                    <span class="recipe-category">Vegano</span>
-                    <h3>Bobó de palmito</h3>
-                    <p>Creme de mandioca com palmito e temperos aromáticos, saboroso e fácil de preparar.</p>
-                    <a href="bobo-palmito-veg.html" class="btn-text">Ver Receita Completa</a>
-                </div>
-            </div>
-
-            <div class="recipe-card">
-                <div class="recipe-img" style="background-image: url('images/carne-moida-vegana.jpg');"></div>
-                <div class="recipe-content">
-                    <span class="recipe-category">Vegano</span>
-                    <h3>Carne moída vegana
-</h3>
-                    <p>Carne moída vegana de soja, temperada e refogada, prática e saborosa para diversas receitas.</p>
-                    <a href="#cheddar-recipe" class="btn-text">Ver Receita Completa</a>
-                </div>
-            </div>
-
-            <div class="recipe-card">
-                <div class="recipe-img" style="background-image: url('images/hamburguer-de-grao-de-bico.webp');"></div>
-                <div class="recipe-content">
-                    <span class="recipe-category">Vegano</span>
-                    <h3>Hambúrguer de grão-de-bico
-</h3>
-                    <p>Hambúrguer de grão-de-bico com cogumelos e molho de castanhas, nutritivo, vegano e cheio de sabor.</p>
-                    <a href="#queijo-branco-recipe" class="btn-text">Ver Receita Completa</a>
-                </div>
-            </div>
-
-            <div class="recipe-card">
-                <div class="recipe-img" style="background-image: url('images/pure-de-batata-sem-erro.avif');"></div>
-                <div class="recipe-content">
-                    <span class="recipe-category">Vegano</span>
-                    <h3>Purê de batata sem leite:
-</h3>
-                    <p>Purê de batata vegano é fácil, feito com água e azeite, e tão saboroso quanto o tradicional.</p>
-                    <a href="#maionese-recipe" class="btn-text">Ver Receita Completa</a>
-                </div>
-            </div>
-
-            <div class="recipe-card">
-                <div class="recipe-img" style="background-image: url('images/feijoada-vegana-portal.webp');"></div>
-                <div class="recipe-content">
-                    <span class="recipe-category">Vegano</span>
-                    <h3>
-Feijoada vegana
-</h3>
-                    <p>Salada de feijão-branco é nutritiva e prática, combinando legumes, brócolis, milho e azeitonas, perfeita como acompanhamento ou prato leve.</p>
-                    <a href="#humus-recipe" class="btn-text">Ver Receita Completa</a>
-                </div>
-            </div>
-        </div>
-    </section>
-</div>
-   
     <footer>
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <h2>ReceitasGourmet</h2>
-                    <p>Receitas especiais para todos os gostos</p>
+                    <h2>SnackIt</h2>
                 </div>
                 <div class="footer-links">
                     <h3>Links Rápidos</h3>
@@ -215,7 +231,7 @@ Feijoada vegana
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 ReceitasGourmet. Todos os direitos reservados.</p>
+                <p>&copy; 2025 SnackIt. Todos os direitos reservados.</p>
             </div>
         </div>
     </footer>
@@ -223,4 +239,5 @@ Feijoada vegana
     <script src="js/script.js"></script>
     <script src="js/dark-mode.js"></script>
 </body>
+
 </html>
