--- a/frozen-hot-chocolate.html
+++ b/frozen-hot-chocolate.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Receitas de Filmes e Séries - SnackIt</title>
-    <link rel="stylesheet" href="receitas/style.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/dark-mode.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Open+Sans:wght@300;400;600&display=swap"
+        rel="stylesheet">
     <script src="https://kit.fontawesome.com/23a7e280be.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <header>
         <div class="container">
             <div class="logo">
-                 <img src="images/logo_snack_it.png" alt="">
+                <img src="images/logo_snack_it.png" alt="">
             </div>
             <nav>
                 <button class="mobile-menu-btn">
@@ -35,82 +39,114 @@
             </nav>
         </div>
     </header>
- 
+
     <div class="container-banner">
         <div class="text">
-              <h1>Serendipity</h1>
-        </div>  
+            <h1>Serendipity</h1>
+        </div>
     </div>
- 
+
     <div id="image" class="image-seren">
-       
+
     </div>
- 
+
     <div class="container-recipe">
         <div class="all">
             <h2>Frozen Hot Chocolate</h2>
-        <div class="desc">
-            <p>Bebida gelada, cremosa e intensamente chocolateada, servida no famoso Serendipity 3 de Nova York, imortalizada no filme Serendipity (2001).</p>
-        </div>
- 
-        <div class="espec">
-             <div class="time">
-            <i class="fa-solid fa-clock"></i>
-            <li>Tempo: <br> 20 minutos</li>
+            <div class="desc">
+                <p>Bebida gelada, cremosa e intensamente chocolateada, servida no famoso Serendipity 3 de Nova York,
+                    imortalizada no filme Serendipity (2001).</p>
             </div>
- 
-            <div class="people">
-            <i class="fa-solid fa-people-group"></i>
-            <li>Serve: <br> 2 porções</li>
+
+            <div class="espec">
+                <div class="time">
+                    <i class="fa-solid fa-clock"></i>
+                    <li>Tempo: <br> 20 minutos</li>
+                </div>
+
+                <div class="people">
+                    <i class="fa-solid fa-people-group"></i>
+                    <li>Serve: <br> 2 porções</li>
+                </div>
+
+                <div class="level">
+                    <i class="fa-solid fa-signal"></i>
+                    <li>Dificuldade: <br> Média</li>
+                </div>
             </div>
- 
-            <div class="level">
-            <i class="fa-solid fa-signal"></i>
-            <li>Dificuldade: <br> Média</li>
+
+            <div class="ingredients">
+                <h2>Ingredientes</h2>
+                <ul>
+                    <li>90 g de chocolate meio‑amargo </li>
+                    <li>2 colheres de chá de achocolatado em pó</li>
+                    <li>2 colheres de chá de achocolatado em pó</li>
+                    <li>360 ml de leite </li>
+                    <li>3 xícaras de gelo </li>
+                    <li>1 folha de massa folhadaChantilly e raspas de chocolate para servir</li>
+                </ul>
             </div>
+
+            <div class="utensilios">
+                <h2>Utensílios</h2>
+                <ul>
+                    <li>Forma de assar</li>
+                    <li>Faca</li>
+                    <li>Tábua de corte</li>
+                    <li>Pincel de cozinha</li>
+                    <li>Colher</li>
+                </ul>
+            </div>
+
+            <div class="preparo">
+                <h2>Modo de Preparo</h2>
+                <ul>
+                    <li>Pré-aqueça o forno a 180°C.</li>
+                    <li>Em uma tigela, misture as maçãs, açúcar, canela, passas e nozes.</li>
+                    <li>Abra a massa folhada em uma superfície enfarinhada.</li>
+                    <li>Coloque o recheio sobre a massa e enrole formando um strudel.</li>
+                    <li>Pincele a manteiga derretida sobre o strudel.</li>
+                    <li>Leve ao forno por 30-35 minutos até dourar. Polvilhe açúcar de confeiteiro antes de servir.</li>
+                </ul>
+            </div>
+
+            <br>
         </div>
- 
-        <div class="ingredients">
-            <h2>Ingredientes</h2>
-            <ul>
-                <li>90 g de chocolate meio‑amargo </li>
-                <li>2 colheres de chá de achocolatado em pó</li>
-                <li>2 colheres de chá de achocolatado em pó</li>
-                <li>360 ml de leite </li>
-                <li>3 xícaras de gelo </li>
-                <li>1 folha de massa folhadaChantilly e raspas de chocolate para servir</li>
-            </ul>
-        </div>
- 
-        <div class="utensilios">
-            <h2>Utensílios</h2>
-             <ul>
-                <li>Forma de assar</li>
-                <li>Faca</li>
-                <li>Tábua de corte</li>
-                <li>Pincel de cozinha</li>
-                <li>Colher</li>
-            </ul>
-        </div>
- 
-        <div class="preparo">
-            <h2>Modo de Preparo</h2>
-            <ul>
-                <li>Pré-aqueça o forno a 180°C.</li>
-                <li>Em uma tigela, misture as maçãs, açúcar, canela, passas e nozes.</li>
-                <li>Abra a massa folhada em uma superfície enfarinhada.</li>
-                <li>Coloque o recheio sobre a massa e enrole formando um strudel.</li>
-                <li>Pincele a manteiga derretida sobre o strudel.</li>
-                <li>Leve ao forno por 30-35 minutos até dourar. Polvilhe açúcar de confeiteiro antes de servir.</li>
-            </ul>
-        </div>
- 
-        <br>
+
     </div>
- 
-    </div>
- 
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-logo">
+                    <h2>SnackIt</h2>
+                </div>
+                <div class="footer-links">
+                    <h3>Links Rápidos</h3>
+                    <ul>
+                        <li><a href="index.html">Início</a></li>
+                        <li><a href="filmes-series.html">Filmes & Séries</a></li>
+                        <li><a href="veganas.html">Veganas</a></li>
+                        <li><a href="fitness.html">Fitness</a></li>
+                        <li><a href="originais.html">Originais</a></li>
+                        <li><a href="sobre.html">Sobre</a></li>
+                    </ul>
+                </div>
+                <div class="footer-social">
+                    <h3>Redes Sociais</h3>
+                    <div class="social-icons">
+                        <a href="#" class="social-icon"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="#" class="social-icon"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="#" class="social-icon"><i class="fa-brands fa-x-twitter"></i></a>
+                        <a href="#" class="social-icon"><i class="fa-brands fa-google"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2025 SnackIt. Todos os direitos reservados.</p>
+            </div>
+        </div>
+    </footer>
+
     <script src="receitas/script.js"></script>
-        <script src="js/dark-mode.js"></script>
+    <script src="js/dark-mode.js"></script>
 </body>
- 
