--- a/matilda.html
+++ b/matilda.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Receitas de Filmes e Séries - SnackIt</title>
-    <link rel="stylesheet" href="receitas/style.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/dark-mode.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Open+Sans:wght@300;400;600&display=swap"
+        rel="stylesheet">
     <script src="https://kit.fontawesome.com/23a7e280be.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <header>
         <div class="container">
             <div class="logo">
-                 <img src="images/logo_snack_it.png" alt="">
+                <img src="images/logo_snack_it.png" alt="">
             </div>
             <nav>
                 <button class="mobile-menu-btn">
@@ -35,100 +39,134 @@
             </nav>
         </div>
     </header>
- 
+
     <div class="container-banner">
         <div class="text">
-              <h1>Matilda</h1>
-        </div>  
+            <h1>Matilda</h1>
+        </div>
     </div>
- 
+
     <div id="image" class="image-mat">
-       
+
     </div>
- 
+
     <div class="container-recipe">
         <div class="all">
             <h2>Bolo de Chocolate Úmido da Trunchbull</h2>
-        <div class="desc">
-            <p> Famoso pela cena intensa em que Bruce come um bolo inteiro, esse bolo denso, úmido e com cobertura cremosa de chocolate é um deleite irresistível.</p>
-        </div>
- 
-        <div class="espec">
-             <div class="time">
-            <i class="fa-solid fa-clock"></i>
-            <li>Tempo: <br> 50 minutos</li>
+            <div class="desc">
+                <p> Famoso pela cena intensa em que Bruce come um bolo inteiro, esse bolo denso, úmido e com cobertura
+                    cremosa de chocolate é um deleite irresistível.</p>
             </div>
- 
-            <div class="people">
-            <i class="fa-solid fa-people-group"></i>
-            <li>Serve: <br> 8 porções</li>
+
+            <div class="espec">
+                <div class="time">
+                    <i class="fa-solid fa-clock"></i>
+                    <li>Tempo: <br> 50 minutos</li>
+                </div>
+
+                <div class="people">
+                    <i class="fa-solid fa-people-group"></i>
+                    <li>Serve: <br> 8 porções</li>
+                </div>
+
+                <div class="level">
+                    <i class="fa-solid fa-signal"></i>
+                    <li>Dificuldade: <br> Média</li>
+                </div>
             </div>
- 
-            <div class="level">
-            <i class="fa-solid fa-signal"></i>
-            <li>Dificuldade: <br> Média</li>
+
+            <div class="ingredients">
+                <h2>Ingredientes</h2>
+                <ul>
+                    <h1>Massa:</h1>
+                    <li>1 xícara de açúcar (200g)</li>
+                    <li>3/4 xícara de cacau em pó (75g)</li>
+                    <li>1 xícara de farinha de trigo (120g)</li>
+                    <li>1 colher de chá de fermento (5g)</li>
+                    <li>1/2 colher de chá de bicarbonato de sódio (2g)</li>
+                    <li>1/2 xícara de óleo (120ml)</li>
+                    <li>2 ovos</li>
+                    <li>1/2 xícara de leite (120ml)</li>
+                    <li>1/2 xícara de água quente (120ml)</li>
+                    <h1>Cobertura:</h1>
+                    <li>200g de chocolate meio amargo</li>
+                    <li>100ml de creme de leite</li>
+                    <li>Leite condensado</li>
+                </ul>
             </div>
+
+            <div class="utensilios">
+                <h2>Utensílios</h2>
+                <ul>
+                    <li>Forma de assar</li>
+                    <li>Tigelas para mistura</li>
+                    <li>Peneira</li>
+                    <li>Xícaras para medir</li>
+                    <li>Batedeira ou fouet para mistura</li>
+                </ul>
+            </div>
+
+            <div class="preparo">
+                <h2>Modo de Preparo</h2>
+                <ul>
+                    <h1>Massa:</h1>
+                    <li>Pré-aqueça o forno a 180°C.</li>
+                    <li>Em uma tigela peneire: farinha, cacau, açúcar, fermento, bicarbonato e sal. Misture.</li>
+                    <li>Em outra tigela, bata levemente os ovos. Junte leite e óleo.</li>
+                    <li>Despeje os líquidos nos secos e misture com fouet até ficar homogêneo (sem bater demais).</li>
+                    <li>Leve ao forno por 35–45 min</li>
+                    <li>Faça o teste do palito no centro: deve sair com algumas migalhas úmidas, não molhado.</li>
+                    <li>Retire, espere 15 min, passe a faca nas laterais, desenforme sobre uma grade/prato e deixe
+                        esfriar totalmente.</li>
+                    <h1>Cobertura:</h1>
+                    <li>Leve ao forno por 35–45 min</li>
+                    <li>Cozinhe mexendo sem parar até desgrudar levemente do fundo, ponto de brigadeiro mole (8–12 min).
+                    </li>
+                    <li>Desligue e misture o creme de leite até ficar liso e brilhante. Use morno.</li>
+                    <h1>Montagem:</h1>
+                    <li>Se quiser, nivele a superfície do bolo com faca serrilhada.</li>
+                    <li>Coloque o bolo no prato e despeje a cobertura no centro, deixando cair pelas laterais.</li>
+                    <li>lise com espátula e deixe firmar 20–40 min (geladeira acelera).</li>
+                </ul>
+            </div>
+
+            <br>
         </div>
- 
-        <div class="ingredients">
-            <h2>Ingredientes</h2>
-            <ul>
-                <h1>Massa:</h1>
-                <li>1 xícara de açúcar (200g)</li>
-                <li>3/4 xícara de cacau em pó (75g)</li>
-                <li>1 xícara de farinha de trigo (120g)</li>
-                <li>1 colher de chá de fermento (5g)</li>
-                <li>1/2 colher de chá de bicarbonato de sódio (2g)</li>
-                <li>1/2 xícara de óleo (120ml)</li>
-                <li>2 ovos</li>
-                <li>1/2 xícara de leite (120ml)</li>
-                <li>1/2 xícara de água quente (120ml)</li>
-                <h1>Cobertura:</h1>
-                <li>200g de chocolate meio amargo</li>
-                <li>100ml de creme de leite</li>
-                <li>Leite condensado</li>
-            </ul>
-        </div>
- 
-        <div class="utensilios">
-            <h2>Utensílios</h2>
-             <ul>
-                <li>Forma de assar</li>
-                <li>Tigelas para mistura</li>
-                <li>Peneira</li>
-                <li>Xícaras para medir</li>
-                <li>Batedeira ou fouet para mistura</li>
-            </ul>
-        </div>
- 
-        <div class="preparo">
-            <h2>Modo de Preparo</h2>
-            <ul>
-                <h1>Massa:</h1>
-                <li>Pré-aqueça o forno a 180°C.</li>
-                <li>Em uma tigela peneire: farinha, cacau, açúcar, fermento, bicarbonato e sal. Misture.</li>
-                <li>Em outra tigela, bata levemente os ovos. Junte leite e óleo.</li>
-                <li>Despeje os líquidos nos secos e misture com fouet até ficar homogêneo (sem bater demais).</li>
-                <li>Leve ao forno por 35–45 min</li>
-                <li>Faça o teste do palito no centro: deve sair com algumas migalhas úmidas, não molhado.</li>
-                <li>Retire, espere 15 min, passe a faca nas laterais, desenforme sobre uma grade/prato e deixe esfriar totalmente.</li>
-                <h1>Cobertura:</h1>
-                <li>Leve ao forno por 35–45 min</li>
-                <li>Cozinhe mexendo sem parar até desgrudar levemente do fundo, ponto de brigadeiro mole (8–12 min).</li>
-                <li>Desligue e misture o creme de leite até ficar liso e brilhante. Use morno.</li>
-                <h1>Montagem:</h1>
-                <li>Se quiser, nivele a superfície do bolo com faca serrilhada.</li>
-                <li>Coloque o bolo no prato e despeje a cobertura no centro, deixando cair pelas laterais.</li>
-                <li>lise com espátula e deixe firmar 20–40 min (geladeira acelera).</li>
-            </ul>
-        </div>
- 
-        <br>
+
     </div>
- 
-    </div>
- 
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-logo">
+                    <h2>SnackIt</h2>
+                </div>
+                <div class="footer-links">
+                    <h3>Links Rápidos</h3>
+                    <ul>
+                        <li><a href="index.html">Início</a></li>
+                        <li><a href="filmes-series.html">Filmes & Séries</a></li>
+                        <li><a href="veganas.html">Veganas</a></li>
+                        <li><a href="fitness.html">Fitness</a></li>
+                        <li><a href="originais.html">Originais</a></li>
+                        <li><a href="sobre.html">Sobre</a></li>
+                    </ul>
+                </div>
+                <div class="footer-social">
+                    <h3>Redes Sociais</h3>
+                    <div class="social-icons">
+                        <a href="#" class="social-icon"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="#" class="social-icon"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="#" class="social-icon"><i class="fa-brands fa-x-twitter"></i></a>
+                        <a href="#" class="social-icon"><i class="fa-brands fa-google"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2025 SnackIt. Todos os direitos reservados.</p>
+            </div>
+        </div>
+    </footer>
+
     <script src="receitas/script.js"></script>
-        <script src="js/dark-mode.js"></script>
+    <script src="js/dark-mode.js"></script>
 </body>
- 
