--- a/login.html
+++ b/login.html
@@ -70,7 +70,7 @@
                         <div class="options">
                             <a href="#">Esqueceu a <strong>senha?</strong></a>
                         </div>
-                        <button type="submit">Log in</button>
+                        <button class="login-btn" type="submit">Log in</button>
                     </form>
                     <p class="signup-text">Não tem uma conta? <a href="#" id="show-register">Registre-se</a></p>
                 </div>
@@ -82,7 +82,7 @@
                         <input type="text " name="nome_usuario" placeholder="Usuário" required />
                         <input type="password" name="senha" placeholder="Senha" required />
 
-                        <button type="submit">Cadastrar</button>
+                        <button class="cadatrar-btn" type="submit">Cadastrar</button>
                     </form>
                     <p class="signup-text">Já tem conta? <a href="#" id="show-login">Voltar para login</a></p>
                 </div>
